--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1250,11 +1250,11 @@ section .main-inner{
 }
 
 /* sec4 */
-
+/*
 .sec4{
     background: url(../img/foot.jpg)no-repeat center / cover;
 }
-
+*/
 .sec4 .parallax-inner{
     z-index: -1;
 }
@@ -1473,6 +1473,7 @@ footer a{
     .footer-inner .foot-R .str-p {
         font-weight: 500;
         font-size: 18px;
+        margin: 0px 0;
     }
     
 }
@@ -1746,13 +1747,6 @@ a.link-btn.a-blue:hover{
     background:#fff;
     color: #307DCB;
     border: 1px solid #307DCB;
-}
-/* 210924 ch 추가*/
-.ch-kakao {
-    display: block;
-    background: url(../img/ch-softj.png)no-repeat left / contain;
-    width: 100%;
-    height: 35px;
 }
 @media screen and (min-width:1600px){
     .inner-main{
