common.css hidden 수정

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1971,4 +1971,4 @@ section.sec4 .main-inner {
         height: 63%;
     }
 }
-.hidden{display: block!important;}
+.hidden{display: none!important;}
