--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1272,6 +1272,9 @@ section .main-inner{
     font-size: 40px;
     margin-bottom: 20px;
 }
+.con-box .form-in {/*200927 추가*/
+    overflow: hidden;
+}
 .con-box .form-in input{
     float: left;
     width: calc((100% - 10px) / 2);
@@ -1298,7 +1301,7 @@ section .main-inner{
 .con-box .form-in input::placeholder, .con-box .form-in textarea::placeholder{
     color: #064F8E;
 }
-.con-box button {
+.con-box .btn {/*200927 수정*/
     display: block;
     margin: 30px auto 0;
     font-weight: 800;
@@ -1448,7 +1451,7 @@ footer a{
         font-size: 14px;
         height: 19vh;
     }
-    .con-box button {
+    .con-box .btn {/*200927 수정*/
         width: 100% !important;;
         margin: 30px auto 0;
         font-size: 18px;
@@ -1972,3 +1975,10 @@ section.sec4 .main-inner {
     }
 }
 .hidden{display: none!important;}
+/* 210927 추가 */
+.note-editor.note-airframe .note-editing-area .note-editable, .note-editor.note-frame .note-editing-area .note-editable {
+    background-color: #ffffff;
+}
+.note-editor.note-airframe .note-statusbar, .note-editor.note-frame .note-statusbar {
+    background-color: #f5f5f5 !important;
+}
