푸터/이미지 수정

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1258,14 +1258,14 @@ section .main-inner{
 .sec4 .parallax-inner{
     z-index: -1;
 }
-.sec4 .main-inner {
+section.sec4 .main-inner {/* 210927 푸터수정 */
+    height:auto;
     background: rgba(0, 0, 0, 0.5);
 }
-.con-box {
+.con-box {/* 210927 푸터수정 */
     max-width: 700px;
     padding-top: 14.5vh;
-    margin: 0px auto;
-    height: 75%;
+    margin: 0px auto 25px;
 }
 .con-box h2{
     color: #fff;
@@ -1308,17 +1308,14 @@ section .main-inner{
     font-size: 24px;
 }
 .main-wrap>section{
-
     width:100%;
     height:100%;
     overflow: hidden;
 }
-
 /*main*/
 /*footer*/
-footer{
+footer{/* 210927 푸터수정 */
     width:100%;
-    height: 25%;
 }
 footer a{
     color:#fff;
@@ -1946,13 +1943,13 @@ a.link-btn.a-blue:hover{
 }
 /* footer 수정 0204 */
 /* sec4 */
-section.sec4 .main-inner {
-    height: 100vh;
+section.sec4 .main-inner {/* 210927 푸터수정 */
+    height: auto;
 }
-.main-wrap>section.sec4 {
-    height: 100vh;
+.main-wrap>section.sec4 {/* 210927 푸터수정 */
+    height: auto;
 }
-@media screen and (max-width: 767px){
+/*@media screen and (max-width: 767px){210927 푸터삭제
     section.sec4 .main-inner {
         height: 115vh;
     }
@@ -1973,7 +1970,7 @@ section.sec4 .main-inner {
     .con-box {
         height: 63%;
     }
-}
+}*/
 .hidden{display: none!important;}
 /* 210927 추가 */
 .note-editor.note-airframe .note-editing-area .note-editable, .note-editor.note-frame .note-editing-area .note-editable {
