--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1979,3 +1979,4 @@ section.sec4 .main-inner {/* 210927 푸터수정 */
 .note-editor.note-airframe .note-statusbar, .note-editor.note-frame .note-statusbar {
     background-color: #f5f5f5 !important;
 }
+/*2021-10-06 css 수정*/
