--- a/jobopening/assets/css/index.css
+++ b/jobopening/assets/css/index.css
@@ -167,8 +167,14 @@ li:first-child .circle{
     font-size: 1.6rem;
     line-height: 2rem;
     padding-left: 30px;
-    margin-bottom: 22px;
 }
+.note{
+    text-align: right;
+    font-size: 14px;
+    color: #b42525;
+}
+.mt50{margin-top:50px}
+.ml50{margin-left: 50px}
 .tb1{
     width:100%;
     font-size:16px;
