포트폴리오 모바일썸네일 수정 최종

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -658,6 +658,9 @@ section .main-inner{
 .temp-right{
     right:0;
 }
+.temp-right.displayNone .phoneBox{
+    display:none;
+}
 .tabletBox, .phoneBox{
     position:absolute;
 }
