--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -57,11 +57,11 @@ table {
 }
 
 input{
-    -webkit-appearance: none;
-    -moz-appearance:none;
-    appearance:none;
-    border:1px solid #cccccc;
-    outline: 0;
+    /*-webkit-appearance: none;*/
+    /*-moz-appearance:none;*/
+    /*appearance:none;*/
+    /*border:1px solid #cccccc;*/
+    /*outline: 0;*/
 }
 a{
     color:#333;
