--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -671,31 +671,31 @@ section .main-inner{
     -ms-transform: translateY(-50%);
 }
 .phoneBox{
-    top:50%;
-    right:18%;
+    top: 56%;
+    right: 18%;
     transform: translateY(-40%);
     -webkit-transform: translateY(-40%);
     -ms-transform: translateY(-40%);
 }
 .tabletLayout{
-    width:45vw;
-    height:100vh;
-    background:url(../img/mockup-tb.png) no-repeat center / contain;
+    width:44vw;
+    padding-top: 77%;
+    background:url(../img/mockup-tb2.png) no-repeat center / contain;
 }
 .phoneLayout{
     width:12vw;
-    height:100vh;
-    background:url(../img/mockup-ph.png) no-repeat center / contain;
+    padding-top: 205%;
+    background:url(../img/mockup-ph2.png) no-repeat center / contain;
 }
 .tabletimg{
-    position:absolute;
-    top:50%;
+    position: absolute;
+    top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
-    width:41vw;
-    height:26.1vw;
-    margin: 0 2vw;
+    width: 41.1vw;
+    padding-top:70%;
+    margin: 0 1.5vw;
     z-index: -1;
     overflow: hidden;
 }
@@ -721,16 +721,17 @@ section .main-inner{
     }
 }
 .phoneimg{
-    position:absolute;
-    top:50%;
+    position: absolute;
+    top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
-    width: 11vw;
-    height:18.5vw;
-    margin: 0 0.5vw;
+    width: 10.7vw;
+    padding-top: 192%;
+    margin: 0 0.7vw;
     z-index: -1;
     overflow: hidden;
+    border-radius: 15px;
 }
 .phoneimg img{
     position:absolute;
@@ -880,13 +881,26 @@ section .main-inner{
 .sec1-txtbox p{
     margin-bottom:30px;
 }
+.abtn{
+    background: #3897DE;
+    color: #fff;
+    font-size: 24px;
+    letter-spacing: -1px;
+    height: 66px;
+    padding: 0 25px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 24px -5px #000000;
+}
+.abtn:hover{
+    background-color:#1672B8;
+}
 @media all and (orientation:portrait){/*세로*/
     .temp-left, .temp-right{
         width:100%;
         height:50vh;
     }
     .temp-left{
-        bottom:18vw;/*채용공고 버튼*/
+        bottom:5vw;
     }
     .temp-right{
         top:11vw;
@@ -895,25 +909,24 @@ section .main-inner{
         width:100%;
         left:0;
         padding-left:10%;
-        font-size:6vw;
+        font-size:26px;
     }
     .tabletBox{
-        top:40%;
-        right:5%;
+        top: 40%;
+        right: 50%;
+        transform: translate(50%, -50%);
     }
     .tabletimg{
-        width:82vw;
-        max-width:59vh;
-        height:53vw;
-        max-height:38vh;
-        margin: 0 4vw;
+        width: 84vw;
+        max-width: 47vh;
+        margin: 0 3%;
     }
     .tabletLayout{
         width:90vw;
-        max-width:65vh;
+        max-width:50vh;
     }
     .phoneBox{
-        top:36%;
+        top:50%;
         right:14%;
     }
     .phoneimg{
@@ -926,6 +939,49 @@ section .main-inner{
     .phoneLayout{
         width:30vw;
         max-width:16vh;
+    }
+    .abtn {
+        top: 78%;
+        left: 50%;
+    }
+}
+@media screen and (max-width:1200px){
+    header.main-hd {
+        padding: 20px 20px 0 0;
+    }
+    .menu-btn{
+        top: 50px;
+    }
+}
+@media screen and (max-width:720px){
+    .menu-btn{
+        top: 40px;
+    }
+    .menu-btn::after, .menu-btn::before{
+        width:50px;
+    }
+    .icon-scroll-box{
+        width:50px;
+        height:50px;
+    }
+    .icon-scroll{
+        width:24px;
+        height:36px;
+        margin:0;
+        transform:translate(-50%, -50%);
+    }
+    .sec1-txtbox{
+        font-size: 20px;
+    }
+    .temp-left{
+        bottom: 8%;
+    }
+    .sec1-txtbox p{
+        margin-bottom:16px;
+    }
+    .abtn{
+        font-size:20px;
+        height:55px;
     }
 }
 /* sec2 */
@@ -1278,7 +1334,13 @@ section .main-inner{
         font-size:14px;
     }
 }
-
+.sec3 .tabletimg2 img{
+    animation: none;
+}
+.sec3 .tabletimg img,
+.sec3 .phoneimg img{
+    animation: none;
+}
 /* sec4 */
 
 .sec4{
@@ -2022,36 +2084,3 @@ section.sec4 .main-inner {/* 211007 푸터수정 */
 .note-editor.note-airframe .note-statusbar, .note-editor.note-frame .note-statusbar {
     background-color: #f5f5f5 !important;
 }
-/* 211008 추가 */
-
-.abtn{
-    /*position: absolute;*/
-    /*top: 62%;*/
-    /*left: 45%;*/
-    /*transform: translateX(-50%);*/
-    background: #3897DE;
-    color: #fff;
-    font-size: 24px;
-    letter-spacing: -1px;
-    height: 66px;
-    padding: 0 25px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 24px -5px #000000;
-}
-.abtn:hover{
-    background-color:#1672B8;
-}
-.sec3 .tabletimg2 img{
-    animation: none;
-}
-.sec3 .tabletimg img,
-.sec3 .phoneimg img{
-    animation: none;
-}
-@media (orientation: portrait) {
-    .abtn {
-        top: 78%;
-        left: 50%;
-    }
-}
-
