채용공고 수정

--- a/jobopening/assets/css/index.css
+++ b/jobopening/assets/css/index.css
@@ -193,6 +193,9 @@ li:first-child .circle{
     font-weight: 100;
     line-height: 24px;
 }
+.tb1 td.lineH{
+    line-height: 30px;
+}
 .sec2{
     width:100%;
     background-color:#0d6fb8;
@@ -286,7 +289,7 @@ li:first-child .circle{
     -webkit-box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.24);
     -moz-box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.24);
     box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.24);
-    background:url(../img/map.png) center center no-repeat;
+    background:url(../img/map1.png) center center no-repeat;
     background-size:cover;
 }
 .button-download{
